--- a/SBoxApp/SBoxApp.csproj
+++ b/SBoxApp/SBoxApp.csproj
@@ -45,6 +45,10 @@
         <PackageCertificateThumbprint>55607BEEF0EBF154AFCAA7D27EC7E06E4063F35E</PackageCertificateThumbprint>
     </PropertyGroup>
 
+    <PropertyGroup Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">
+        <CodesignEntitlements>Platforms/MacCatalyst/Entitlements.plist</CodesignEntitlements>
+    </PropertyGroup>
+
     <ItemGroup>
         <!-- App Icon -->
         <MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#0b1120" />
